Mlsa-landing-page

--- a/index.html
+++ b/index.html
@@ -3,152 +3,208 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microsoft Learn Student Ambassadors</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <title>MLSA - Comsats University Lahore</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header (Optional Navigation) -->
-    <header>
-        <nav>
+    <!-- Hero Section -->
+    <div class="hero">
+        <div class="hero-content">
             <div class="logo">
-                <img src="assets/images/mlsa.jpg" alt="MLSA Logo" width="50" height="50">
+                <div class="logo-icon">🚀</div>
                 <span>MLSA</span>
             </div>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#activities">Activities</a></li>
-                <li><a href="#benefits">Benefits</a></li>
-                <li><a href="#join">Join</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section id="hero" class="hero">
-        <div class="hero-content">
-            <h1>Microsoft Learn Student Ambassadors</h1>
-            <p>Empowering students through technology, leadership, and community</p>
-            <a href="#join" class="cta-button">Join MLSA</a>
+            <h1>Join MLSA at Comsats University Lahore</h1>
+            <p>Unleash your inner tech wizard with MLSA! Hack, learn, and lead like a boss while making the world your playground of innovation.</p>
+            <a href="#join" class="cta-button">👉 Join MLSA Now</a>
         </div>
+    </div>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2 class="section-title">About MLSA at Comsats University Lahore</h2>
+        <p class="section-description">
+            The Microsoft Learn Student Ambassadors program empowers students to grow as tech leaders. We aim to foster innovation, build skills, and connect students globally.
+        </p>
     </section>
 
-    <!-- About MLSA Section -->
-    <section id="about" class="section about">
-        <div class="container">
-            <h2>About MLSA</h2>
-            <p>The Microsoft Learn Student Ambassadors (MLSA) program is designed to empower students worldwide by fostering leadership, technical skills, and community engagement within the Microsoft ecosystem. As ambassadors, you’ll lead workshops, participate in challenges, and contribute to open-source projects, making a real impact while building your career in tech.</p>
-            <p>Our mission focuses on:</p>
-            <ul>
-                <li><strong>Student Leadership:</strong> Develop skills to guide and inspire peers.</li>
-                <li><strong>Technology Learning:</strong> Access free Microsoft Learn resources and certifications.</li>
-                <li><strong>Community Impact:</strong> Organize events and meetups to build local tech communities.</li>
-                <li><strong>Microsoft Ecosystem:</strong> Dive deep into Azure, AI, and more with exclusive tools.</li>
-            </ul>
+    <!-- Mission Section -->
+    <section>
+        <h2 class="section-title">Our Mission at Comsats University Lahore</h2>
+        <p class="section-description">
+            The Microsoft Learn Student Ambassadors (MLSA) program connects tech-enthusiastic students who aim to drive change and innovation in their communities through Microsoft technologies. At Comsats University Lahore, our mission is to cultivate the next generation of tech leaders.
+        </p>
+        
+        <div class="mission-cards">
+            <div class="mission-card">
+                <h3>💡 Foster Innovation</h3>
+                <p>Drive innovation using cutting-edge Microsoft technologies and tools.</p>
+            </div>
+            <div class="mission-card">
+                <h3>🎯 Empower Leaders</h3>
+                <p>Empower students to lead and inspire their communities.</p>
+            </div>
+            <div class="mission-card">
+                <h3>🌐 Global Connection</h3>
+                <p>Connect with global tech communities and industry professionals.</p>
+            </div>
         </div>
     </section>
 
     <!-- Activities Section -->
-    <section id="activities" class="section activities">
-        <div class="container">
-            <h2>Activities</h2>
-            <div class="grid">
-                <div class="card">
-                    <i class="fas fa-rocket"></i>
-                    <h3>Technical Workshops</h3>
-                    <p>Host and attend hands-on sessions on Azure, AI, and cloud technologies.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-brain"></i>
-                    <h3>Microsoft Learn Challenges</h3>
-                    <p>Compete in skill-building challenges and earn badges.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-microphone"></i>
-                    <h3>Community Events & Meetups</h3>
-                    <p>Organize local meetups to connect with fellow tech enthusiasts.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-globe"></i>
-                    <h3>Open-Source Contributions</h3>
-                    <p>Contribute to projects on GitHub and collaborate globally.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-trophy"></i>
-                    <h3>Hackathons & Competitions</h3>
-                    <p>Participate in exciting hackathons and win prizes.</p>
-                </div>
+    <section id="activities">
+        <h2 class="section-title">What We Do at MLSA</h2>
+        <p class="section-description">Engage in activities designed to learn, build, and lead using cutting-edge Microsoft tools and platforms.</p>
+        
+        <div class="activities-grid">
+            <div class="activity-card">
+                <div class="activity-icon">🧑‍🏫</div>
+                <h3>Workshops & Webinars</h3>
+                <p>Learning sessions on Azure, AI, Power BI, and more.</p>
+            </div>
+            <div class="activity-card">
+                <div class="activity-icon">🚀</div>
+                <h3>Hackathons</h3>
+                <p>Participate in exciting coding competitions and challenges.</p>
+            </div>
+            <div class="activity-card">
+                <div class="activity-icon">🌐</div>
+                <h3>Community Outreach</h3>
+                <p>Collaborate with MLSAs and tech enthusiasts globally.</p>
+            </div>
+            <div class="activity-card">
+                <div class="activity-icon">🎥</div>
+                <h3>Tech Showcases</h3>
+                <p>Build and showcase projects to inspire others.</p>
             </div>
         </div>
     </section>
 
     <!-- Benefits Section -->
-    <section id="benefits" class="section benefits">
-        <div class="container">
-            <h2>Benefits of Joining MLSA</h2>
-            <div class="grid">
-                <div class="benefit-item">
-                    <i class="fas fa-certificate"></i>
-                    <h3>Microsoft Certifications & Learning Paths</h3>
-                    <p>Free access to certifications and guided learning modules.</p>
-                </div>
-                <div class="benefit-item">
-                    <i class="fas fa-users"></i>
-                    <h3>Global Networking Opportunities</h3>
-                    <p>Connect with students, professionals, and Microsoft experts worldwide.</p>
-                </div>
-                <div class="benefit-item">
-                    <i class="fas fa-user-tie"></i>
-                    <h3>Leadership & Soft-Skill Development</h3>
-                    <p>Build public speaking, project management, and teamwork skills.</p>
-                </div>
-                <div class="benefit-item">
-                    <i class="fas fa-tools"></i>
-                    <h3>Access to Microsoft Tools & Resources</h3>
-                    <p>Get early access to Azure credits, software, and insider events.</p>
-                </div>
-                <div class="benefit-item">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>Career Growth & Recognition</h3>
-                    <p>Enhance your resume with ambassador status and potential internships.</p>
-                </div>
+    <section id="benefits">
+        <h2 class="section-title">Why Become an MLSA?</h2>
+        <div class="benefits-grid">
+            <div class="benefit-card">
+                <div class="benefit-icon">🎓</div>
+                <h3>Skill Enhancement</h3>
+                <p>Access exclusive Microsoft Learn paths and earn certifications to boost your expertise.</p>
+            </div>
+            <div class="benefit-card">
+                <div class="benefit-icon">💼</div>
+                <h3>Career Opportunities</h3>
+                <p>Enhance your resume and career prospects by showcasing leadership in tech.</p>
+            </div>
+            <div class="benefit-card">
+                <div class="benefit-icon">🤝</div>
+                <h3>Networking</h3>
+                <p>Connect with Microsoft mentors, tech professionals, and like-minded students.</p>
+            </div>
+            <div class="benefit-card">
+                <div class="benefit-icon">🏆</div>
+                <h3>Rewards & Recognition</h3>
+                <p>Earn badges, prizes, and recognition for your contributions.</p>
+            </div>
+            <div class="benefit-card">
+                <div class="benefit-icon">🌍</div>
+                <h3>Global Impact</h3>
+                <p>Collaborate with MLSAs worldwide and contribute to global tech movements.</p>
             </div>
         </div>
     </section>
 
-    <!-- How to Join Section -->
-    <section id="join" class="section join">
-        <div class="container">
-            <h2>How to Join</h2>
-            <ol>
-                <li><strong>Sign up on Microsoft Learn:</strong> Create a free account at learn.microsoft.com.</li>
-                <li><strong>Apply for MLSA program:</strong> Submit your application through the official portal.</li>
-                <li><strong>Start learning and contributing:</strong> Begin your journey with workshops and challenges.</li>
-            </ol>
-            <a href="https://learn.microsoft.com/en-us/training/student-hub/" class="cta-button" target="_blank">Apply Now</a>
+    <!-- How It Works Section -->
+    <section>
+        <h2 class="section-title">How to Join MLSA in 3 Simple Steps</h2>
+        <div class="steps-container">
+            <div class="step">
+                <div class="step-number">1</div>
+                <h3>Sign Up</h3>
+                <p>Fill in your details and join the MLSA program at Comsats University Lahore.</p>
+            </div>
+            <div class="step">
+                <div class="step-number">2</div>
+                <h3>Get Involved</h3>
+                <p>Engage in learning paths, events, and activities within the community.</p>
+            </div>
+            <div class="step">
+                <div class="step-number">3</div>
+                <h3>Lead & Inspire</h3>
+                <p>Use your skills to lead initiatives and make a positive impact.</p>
+            </div>
         </div>
+    </section>
+
+    <!-- CTA Section -->
+    <div class="cta-section" id="join">
+        <h2>✨ Ready to Start Your Journey?</h2>
+        <p style="font-size: 1.2rem; margin-bottom: 2rem; color: rgba(255,255,255,0.9);">
+            Open to full-time students passionate about technology and community building.
+        </p>
+        <a href="#" class="cta-button">Apply Now to Become an MLSA!</a>
+    </div>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2 class="section-title">Contact Us</h2>
+        <p class="section-description">
+            Have questions or want to connect? Reach out to MLSA Comsats University Lahore via email or our social channels.
+        </p>
     </section>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="logo">
-                    <img src="assets/images/mlsa.jpg" alt="MLSA Logo" width="50" height="50">
-                    <span>Microsoft Learn Student Ambassadors</span>
-                </div>
-                <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                </div>
-            </div>
-            <p>&copy; 2026 Microsoft Learn Student Ambassadors. Powered by Microsoft Learn Student Ambassadors.</p>
+        <div class="footer-links">
+            <a href="#about">About</a>
+            <a href="#activities">Activities</a>
+            <a href="#benefits">Benefits</a>
+            <a href="#join">Join MLSA</a>
+            <a href="#contact">Contact</a>
         </div>
+        <div class="social-icons">
+            <a href="#" class="social-icon">in</a>
+            <a href="#" class="social-icon">💻</a>
+            <a href="#" class="social-icon">📷</a>
+        </div>
+        <p style="color: rgba(255,255,255,0.6);">© 2025 MLSA Comsats University Lahore. All rights reserved.</p>
     </footer>
+
+    <script>
+        // Smooth scroll for navigation
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+
+        // Scroll animations
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        }, observerOptions);
+
+        // Observe all cards and steps
+        document.querySelectorAll('.mission-card, .activity-card, .benefit-card, .step').forEach(el => {
+            el.style.opacity = '0';
+            el.style.transform = 'translateY(30px)';
+            el.style.transition = 'all 0.6s ease';
+            observer.observe(el);
+        });
+    </script>
 </body>
 </html>
